Optimize synth callback

--- a/CISYNTH.ioc
+++ b/CISYNTH.ioc
@@ -158,7 +158,8 @@ NVIC.ADC_IRQn=true\:0\:2\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:1\:0\:true\:false\:false\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:1\:1\:true\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:1\:0\:true\:false\:false\:true\:false
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI15_10_IRQn=true\:1\:7\:true\:false\:true\:true\:true
+NVIC.HRTIM1_TIMA_IRQn=true\:0\:1\:false\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:1\:0\:true\:false\:false\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true\:false
