--- a/CISYNTH.ioc
+++ b/CISYNTH.ioc
@@ -40,13 +40,10 @@ CORTEX_M7.CPU_DCache=Enabled
 CORTEX_M7.CPU_ICache=Enabled
 CORTEX_M7.IPParameters=CPU_ICache,CPU_DCache,MPU_Control
 CORTEX_M7.MPU_Control=__NULL
-DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
 DAC1.DAC_OutputBuffer-DAC_OUT1=DAC_OUTPUTBUFFER_ENABLE
-DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_T6_TRGO
-DAC1.DAC_Trigger-DAC_OUT2=DAC_TRIGGER_T6_TRGO
+DAC1.DAC_Trigger-DAC_OUT1=DAC_TRIGGER_NONE
 DAC1.DAC_UserTrimming-DAC_OUT1=DAC_TRIMMING_FACTORY
-DAC1.IPParameters=DAC_Trigger-DAC_OUT1,WaveGeneration-DAC_OUT1,DAC_UserTrimming-DAC_OUT1,DAC_OutputBuffer-DAC_OUT1,DAC_Channel-DAC_OUT2,DAC_Trigger-DAC_OUT2
-DAC1.WaveGeneration-DAC_OUT1=DISABLE
+DAC1.IPParameters=DAC_Trigger-DAC_OUT1,DAC_UserTrimming-DAC_OUT1,DAC_OutputBuffer-DAC_OUT1
 Dma.Request0=USART3_TX
 Dma.RequestsNb=1
 Dma.USART3_TX.0.Direction=DMA_MEMORY_TO_PERIPH
@@ -106,49 +103,48 @@ Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
 Mcu.Pin1=PC13
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA7
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
-Mcu.Pin15=PB0
-Mcu.Pin16=PB1
-Mcu.Pin17=PE9
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin10=PA1
+Mcu.Pin11=PA2
+Mcu.Pin12=PA3
+Mcu.Pin13=PA4
+Mcu.Pin14=PA7
+Mcu.Pin15=PC4
+Mcu.Pin16=PC5
+Mcu.Pin17=PB0
+Mcu.Pin18=PB1
+Mcu.Pin19=PE9
 Mcu.Pin2=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin20=PD8
-Mcu.Pin21=PD9
-Mcu.Pin22=PG6
-Mcu.Pin23=PG7
-Mcu.Pin24=PC6
-Mcu.Pin25=PC8
-Mcu.Pin26=PC9
-Mcu.Pin27=PA8
-Mcu.Pin28=PA9
-Mcu.Pin29=PA10
+Mcu.Pin20=PB13
+Mcu.Pin21=PB14
+Mcu.Pin22=PD8
+Mcu.Pin23=PD9
+Mcu.Pin24=PG6
+Mcu.Pin25=PG7
+Mcu.Pin26=PC6
+Mcu.Pin27=PC8
+Mcu.Pin28=PC9
+Mcu.Pin29=PA8
 Mcu.Pin3=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin30=PA11
-Mcu.Pin31=PA12
-Mcu.Pin32=PA13 (JTMS/SWDIO)
-Mcu.Pin33=PA14 (JTCK/SWCLK)
-Mcu.Pin34=PC10
-Mcu.Pin35=PD5
-Mcu.Pin36=PD6
-Mcu.Pin37=PD7
-Mcu.Pin38=PG11
-Mcu.Pin39=PG13
-Mcu.Pin4=PH0-OSC_IN (PH0)
-Mcu.Pin40=PB7
-Mcu.Pin41=VP_SYS_VS_Systick
-Mcu.Pin42=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin43=VP_TIM15_VS_no_output1
-Mcu.Pin5=PH1-OSC_OUT (PH1)
-Mcu.Pin6=PC1
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
-Mcu.PinsNb=44
+Mcu.Pin30=PA9
+Mcu.Pin31=PA10
+Mcu.Pin32=PA11
+Mcu.Pin33=PA12
+Mcu.Pin34=PA13 (JTMS/SWDIO)
+Mcu.Pin35=PA14 (JTCK/SWCLK)
+Mcu.Pin36=PC10
+Mcu.Pin37=PG11
+Mcu.Pin38=PG13
+Mcu.Pin39=PB7
+Mcu.Pin4=PF7
+Mcu.Pin40=VP_SYS_VS_Systick
+Mcu.Pin41=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin42=VP_TIM15_VS_no_output1
+Mcu.Pin5=PF8
+Mcu.Pin6=PF9
+Mcu.Pin7=PH0-OSC_IN (PH0)
+Mcu.Pin8=PH1-OSC_OUT (PH1)
+Mcu.Pin9=PC1
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -209,7 +205,6 @@ PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.Locked=true
 PA3.Signal=ADCx_INP15
 PA4.Signal=COMP_DAC11_group
-PA5.Signal=COMP_DAC12_group
 PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PA7.GPIO_Mode=GPIO_MODE_AF_PP
 PA7.GPIO_PuPd=GPIO_NOPULL
@@ -307,30 +302,6 @@ PCC.Seq0=0
 PCC.Series=STM32H7
 PCC.Temperature=25
 PCC.Vdd=3.0
-PD5.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD5.GPIO_Label=CIS_LED_B
-PD5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PD5.GPIO_PuPd=GPIO_NOPULL
-PD5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD5.Locked=true
-PD5.PinState=GPIO_PIN_RESET
-PD5.Signal=GPIO_Output
-PD6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD6.GPIO_Label=CIS_LED_G
-PD6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PD6.GPIO_PuPd=GPIO_NOPULL
-PD6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD6.Locked=true
-PD6.PinState=GPIO_PIN_RESET
-PD6.Signal=GPIO_Output
-PD7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PD7.GPIO_Label=CIS_LED_R
-PD7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
-PD7.GPIO_PuPd=GPIO_NOPULL
-PD7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
-PD7.Locked=true
-PD7.PinState=GPIO_PIN_RESET
-PD7.Signal=GPIO_Output
 PD8.GPIOParameters=GPIO_ModeDefaultPP,GPIO_Speed,GPIO_PuPd
 PD8.GPIO_ModeDefaultPP=GPIO_MODE_AF_PP
 PD8.GPIO_PuPd=GPIO_NOPULL
@@ -356,6 +327,30 @@ PE4.Signal=GPIO_Output
 PE9.GPIOParameters=GPIO_Speed
 PE9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PE9.Signal=S_TIM1_CH1
+PF7.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultOutputPP,PinState,GPIO_PuPd
+PF7.GPIO_Label=CIS_LED_G
+PF7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF7.GPIO_PuPd=GPIO_NOPULL
+PF7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PF7.Locked=true
+PF7.PinState=GPIO_PIN_RESET
+PF7.Signal=GPIO_Output
+PF8.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultOutputPP,PinState,GPIO_PuPd
+PF8.GPIO_Label=CIS_LED_B
+PF8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF8.GPIO_PuPd=GPIO_NOPULL
+PF8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PF8.Locked=true
+PF8.PinState=GPIO_PIN_RESET
+PF8.Signal=GPIO_Output
+PF9.GPIOParameters=GPIO_Label,GPIO_Speed,GPIO_ModeDefaultOutputPP,PinState,GPIO_PuPd
+PF9.GPIO_Label=CIS_LED_R
+PF9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PF9.GPIO_PuPd=GPIO_NOPULL
+PF9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PF9.Locked=true
+PF9.PinState=GPIO_PIN_RESET
+PF9.Signal=GPIO_Output
 PG11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PG11.GPIO_Mode=GPIO_MODE_AF_PP
 PG11.GPIO_PuPd=GPIO_NOPULL
@@ -412,7 +407,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-MX_MDMA_Init-MDMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-true-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_TIM6_Init-TIM6-true-HAL-true,9-MX_HRTIM_Init-HRTIM-true-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM15_Init-TIM15-true-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_ADC1_Init-ADC1-true-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_TIM6_Init-TIM6-true-HAL-true,9-MX_HRTIM_Init-HRTIM-true-HAL-true,10-MX_TIM1_Init-TIM1-false-HAL-true,11-MX_TIM15_Init-TIM15-true-HAL-true,12-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -578,8 +573,6 @@ SH.ADCx_INP9.0=ADC2_INP9,IN9-Single-Ended
 SH.ADCx_INP9.ConfNb=1
 SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
 SH.COMP_DAC11_group.ConfNb=1
-SH.COMP_DAC12_group.0=DAC1_OUT2,DAC_OUT2
-SH.COMP_DAC12_group.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,Output Compare1 CH1
